[package]
name = "program-rust"
version = "0.1.0"
edition = "2021"
description = "Example template program written in Rust"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
solana-program = "2.0.0"


[dev-dependencies]
solana-program-test = "2.0.1"
solana-sdk = "2.0.0"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
